[gd_scene load_steps=13 format=2]

[ext_resource path="res://MainMenu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/ui_main_menu_design/Menu_Assets/title.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/ui_main_menu_design/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu/ui_main_menu_design/Menu_Assets/focus2.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/ui_main_menu_design/Buttons/ContinueButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu/ui_main_menu_design/Buttons/OptionsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainMenu/ui_main_menu_design/Menu_Assets/ver-01.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/ui_main_menu_design/Menu_Assets/characters.png" type="Texture" id=8]
[ext_resource path="res://MainMenu/LoopingBg.gd" type="Script" id=9]
[ext_resource path="res://MainMenu/ui_main_menu_design/Menu_Assets/background.png" type="Texture" id=10]
[ext_resource path="res://MainMenu/ui_main_menu_design/Music/titlesong.ogg" type="AudioStream" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 386, 70 )

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 50
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 50.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="TextContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 386.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextContainer"]
margin_top = 82.0
margin_right = 386.0
margin_bottom = 518.0
custom_constants/separation = 29

[node name="TitleLabel" type="TextureRect" parent="HBoxContainer/TextContainer/VBoxContainer"]
margin_right = 386.0
margin_bottom = 116.0
texture = ExtResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/TextContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 386.0
margin_bottom = 363.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="NewGameButton" parent="HBoxContainer/TextContainer/VBoxContainer/MenuOptions" instance=ExtResource( 3 )]
margin_top = 0.0
margin_bottom = 70.0
custom_styles/focus = SubResource( 1 )

[node name="ContinueButton" parent="HBoxContainer/TextContainer/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
margin_top = 74.0
margin_bottom = 144.0
custom_styles/focus = SubResource( 1 )

[node name="OptionsButton" parent="HBoxContainer/TextContainer/VBoxContainer/MenuOptions" instance=ExtResource( 6 )]
margin_top = 148.0
margin_bottom = 218.0
custom_styles/focus = SubResource( 1 )

[node name="GameInfoLabel" type="TextureRect" parent="HBoxContainer/TextContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 386.0
margin_bottom = 436.0
texture = ExtResource( 7 )

[node name="CharacterContainer" type="CenterContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 390.0
margin_right = 974.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="HBoxContainer/CharacterContainer"]
margin_left = 64.0
margin_top = 22.0
margin_right = 520.0
margin_bottom = 578.0
texture = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

